add server script

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -53,5 +53,7 @@
   <footer>
     <p>© 2025 All Rights Reserved</p>
   </footer>
+
+  <script src="./../services/customer-number-server/scripts.js"></script>
 </body>
 </html>
