ETur 05 - Building the Customer Number Server

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -56,7 +56,7 @@
     </main>
 
     <footer>
-        <p>© 2023 ETUR للبرمجيات. جميع الحقوق محفوظة.</p>
+        <p>© 2025 ETUR </p>
     </footer>
 </body>
 </html>
