create reports file

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -37,7 +37,7 @@
         </section>
 
         <section id="customer-list">
-            <h2>قائمة العملاء</h2>
+            <h2>Customers list</h2>
             <div class="customer-cards">
                 <!-- Customer cards will be displayed here -->
             </div>
