redirect to product manager portal

--- a/etur-portal/customer-prtal/index.html
+++ b/etur-portal/customer-prtal/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#" id="create-report">Create a new report</a></li>
                 <li><a href="#" id="view-reports">View reports</a></li>
+                <li><a href="./../product-manager-portal/index.html" id="go-to-product-manager" class="hidden">Product manager</a></li>
                 <li><a href="#" id="logout">Log out</a></li>
             </ul>
         </nav>
