--- a/etur-portal/product-manager-portal/index.html
+++ b/etur-portal/product-manager-portal/index.html
@@ -12,7 +12,8 @@
         <nav>
             <ul>
                 <li><a href="#" id="view-reports">View reports</a></li>
-                <li><a href="#" id="logout">Logout</a></li>
+                <li><a href="./../customer-prtal/index.html" id="go-to-customer-portal">Cutomer portal</a></li>
+                <li><a href="./../customer-prtal/index.html" id="logout">Logout</a></li>
             </ul>
         </nav>
     </header>
