--- a/etur-portal/customer-prtal/index.html
+++ b/etur-portal/customer-prtal/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#" id="create-report">Create a new report</a></li>
-                <li><a href="#" id="view-reports">View reports</a></li>
+                <li><a href="#" id="view-reports" type="Submit">View reports</a></li>
                 <li><a href="./../product-manager-portal/index.html" id="go-to-product-manager" class="hidden">Product manager</a></li>
                 <li><a href="#" id="logout">Log out</a></li>
             </ul>
