--- a/etur-portal/customer-prtal/index.html
+++ b/etur-portal/customer-prtal/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Customer portal - ETUR</h1>
+        <h1>Customer Portal - ETUR</h1>
         <nav>
-            <ul>
-                <li><a href="#" id="create-report">Create a new report</a></li>
-                <li><a href="#" id="view-reports" type="Submit">View reports</a></li>
-                <li><a href="./../product-manager-portal/index.html" id="go-to-product-manager" class="hidden">Product manager</a></li>
-                <li><a href="#" id="logout">Log out</a></li>
+            <ul>                
+                <div class="nav-links">
+                    <li><a href="#" id="create-report" class="hidden">Create a new report</a></li>
+                    <li><a href="#" id="view-reports" class="hidden">View reports</a></li>
+                    <li><a href="./../product-manager-portal/index.html" id="go-to-product-manager" class="hidden">Product Manager</a></li>
+                </div>
+                <li class="logout"><a href="#" id="logout">Log out</a></li>
             </ul>
         </nav>
     </header>
