--- a/etur-portal/product-manager-portal/index.html
+++ b/etur-portal/product-manager-portal/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Customer Portal - ETUR</h1>
+        <h1>Product Management Portal - ETUR</h1>
         <nav>
             <ul>                
                 <div class="nav-links">
-                    <li><a href="#" id="create-report" >Create a new report</a></li>
+                    <li><a href="#" id="create-report" class="hidden" >Create a new report</a></li>
+                    <li><a href="#" id="back-to-customer-portal" >Customer Portal</a></li>
                     <li><a href="#" id="view-reports" class="hidden">View reports</a></li>
                     <li><a href="./../product-manager-portal/index.html" id="go-to-product-manager" class="hidden">Product Manager</a></li>
                 </div>
