move to customer portal

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -9,6 +9,17 @@
 <body>
     <header>
         <h1>Customer Number System - ETUR </h1>
+        <!-- <h1>Customer Portal - ETUR</h1> -->
+        <nav>
+            <ul>                
+                <div class="nav-links">
+                    <li><a href="#" id="go-to-customer-portal" class="hidden">Customer Portalt</a></li>
+                    <!-- <li><a href="#" id="view-reports" class="hidden">View reports</a></li>
+                    <li><a href="./../product-manager-portal/index.html" id="go-to-product-manager" class="hidden">Product Manager</a></li> -->
+                </div>
+                <li class="logout"><a href="#" id="logout">Log out</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
