--- a/etur-portal/customer-prtal/index.html
+++ b/etur-portal/customer-prtal/index.html
@@ -16,6 +16,7 @@
                     <li><a href="#" id="view-reports" class="hidden">View reports</a></li>
                     <li><a href="./../product-manager-portal/index.html" id="go-to-product-manager" class="hidden">Product Manager</a></li>
                 </div>
+                <li class="Home"><a href="#" id="home">Home</a></li>
                 <li class="logout"><a href="#" id="logout">Log out</a></li>
             </ul>
         </nav>
