--- a/src/website/index.html
+++ b/src/website/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>                
                 <div class="nav-links">
-                    <li><a href="#" id="go-to-customer-portal" class="hidden">Customer Portalt</a></li>
+                    <li><a href="#" id="go-to-customer-portal" class="hidden">Customer Portal</a></li>
                     <!-- <li><a href="#" id="view-reports" class="hidden">View reports</a></li>
                     <li><a href="./../product-manager-portal/index.html" id="go-to-product-manager" class="hidden">Product Manager</a></li> -->
                 </div>
